--- a/style.css
+++ b/style.css
@@ -44,14 +44,20 @@ body
 {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
-}
-@media screen and (max-width: 600px)
-{
   #Academics table {font-size: 12px;margin-left: 2px;padding-left: 2px;}
   #techskills table {font-size: 14px;margin-left:}
   #interskills table {font-size: 12px;margin-left: 2px;padding-left: 2px;}
   #Certificates table {font-size: 12px;margin-left: 2px;padding-left: 2px;}
+}
+@media screen and (max-width: 630px)
+{
+  #Academics table {font-size: 14px;margin-left: 2px;padding-left: 2px;}
+  #techskills table {font-size: 14px;margin-right: 10%;}
+  #interskills table {font-size: 12px;margin-left: 2px;padding-left: 2px;}
+  #Certificates table {font-size: 12px;margin-left: 2px;padding-left: 2px;}
   #contacts p {font-size: 16px;}
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
 }
 #mySidenav
 {
